SAKIII-1009 Fixing message bundles in grouppermissions to show the correct values for the group visibility dropdown.  Using new options as per Bert's changes in this space.  One new option is showing the group to managers only.  This new setting is addressed in sakai_magic's sakai.api.Groups.setPermissions function. SAKIII-853 Updating joinrequests work - dummy data is hidden for now. Next step is getting real data from server per KERN-1125 fix. SAKIII-1037 Fixing issues I raised while merging conflicts in the entity widget.

--- a/devwidgets/entity/css/entity.css
+++ b/devwidgets/entity/css/entity.css
@@ -17,13 +17,6 @@
  */
 
 /* General */
-/* my stuff:
-.entity_header {margin: 10px 0 17px 0; padding: 0; max-width:296px;}
-.entity_header_text {font-size:22px; font-weight:bold; line-height:24px; margin-right:15px;}
-.entity_picture {margin: 0 20px 5px 0; width:64px;}
-.entity_picture img {width:64px;}
-.entity_description {margin-top:1em;}
-*/
 .entity_header {margin: 3px 0 10px 0px; padding: 0; width: 340px; overflow: hidden;}
 .entity_header_text {font-size:22px; font-weight:bold; line-height:24px; margin-right:10px;color:#444}
 .entity_picture {margin: 0 20px 5px 0; font-size: 10px; color: #FFFFFF; line-height: 11px;}
@@ -35,7 +28,6 @@
 .entity_picture .entity_member_end{background:url(/dev/_images/group_avatar_badge_blue_right_128.png) no-repeat;}
 #entity_container a.s3d-action, #entity_container .s3d-actions a {font-size: 12px;}
 .entity_picture_div {padding-bottom: 3px;}
-/* end of repo stuff */
 
 /* Container */
 #entity_container {margin: 19px 0 15px 7px; overflow: hidden;width:700px;}
@@ -43,17 +35,10 @@
 #entity_container form#entity_profile_status {margin-top: 5px;}
 #entity_container form button{margin-left: 5px}
 #entity_container form input[type="text"]{width: 14em}
-/* my stuff:
-#entity_container input[type="text"] {border: 1px solid #ddd;padding: 3px}
-.entity_container_left {max-width: 380px;}
-.entity_container_right {margin-top: 10px; padding-left: 15px; width: 175px}
-.entity_container_right strong {clear: both;: block;float:left;overflow:hidden;width: 90px}
-*/
 #entity_container input[type="text"] {border: 1px solid #ddd;padding: 3px;}
 .entity_container_left {width: 460px}
 .entity_container_right {margin-top: 8px; padding-left: 0px; width: 200px;}
 .entity_container_right strong {clear: both;: block;float:left;overflow:hidden;width: 90px;}
-/* end of repo stuff */
 .entity_container_top_margin {margin-top:15px;}
 .entity_tags {padding-top: 10px;}
 .entity_tags_group {padding-top: 3px;}
